# letta

letta-cpp/: CMakeLists.txt
letta-cpp/include/: Agent.hpp  LLMClient.hpp  Memory.hpp  Tools.hpp
letta-cpp/src/: Agent.cpp  LLMClient.cpp  Memory.cpp  main.cpp
letta-cpp/tests/: AgentTest.cpp  MemoryTest.cpp
